syntax = "proto2";
package s2s;

import "model.proto";
import "db.proto";
import "template.proto";
import "error.proto";

message rpc {
    required int32 code = 1;    // 消息code
    required string from = 2;   //来源服务器
    required string to = 3; // 目标服务器
    required string router = 4; // 路由
    required string type = 5;   //类型 - Rpc or RpcRet
    // 下方命名规则：对应访问的router
    optional error.SError error = 20;

    optional conn conn = 50;
    optional connRet connRet = 51;

    optional playerEnter playerEnter = 100;
    optional playerEnterRet playerEnterRet = 101;
    optional playerLeave playerLeave = 102;
    optional playerLeaveRet playerLeaveRet = 103;
    optional getPlayerAid getPlayerAid = 104;
    optional getPlayerAidRet getPlayerAidRet = 105;
    optional getPlayerModel getPlayerModel = 106;
    optional getPlayerModelRet getPlayerModelRet = 107;

    optional test test = 200;
    optional testRet testRet = 201;
}


message conn {
    required db.ServerConfig config = 1;
}
message connRet{ }

message playerEnter {
    required db.PlayerInfo player = 1;
}
message playerEnterRet {}
message playerLeave {
    required string pid = 1;
}
message playerLeaveRet {}

message getPlayerAid {
    required string pid = 1;
}
message getPlayerAidRet {
    required string aid = 1;
}
message getPlayerModel{
    required string pid = 1;
    optional db.PlayerInfo data = 2;
}
message getPlayerModelRet{
    required bytes jsonBuff = 1;
}

message test{

}

message testRet{
}
