syntax = "proto2";
// 数据模板
package template;

// 错误代码 template.error_code
message ErrorCode{
    required int32 id = 1;
    required string code = 2;
    required string clientTip = 3;
    required string serverTip = 4;
    optional string desc = 5;
}